--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2269,13 +2269,13 @@
     {
      "data": {
       "text/plain": [
-       "array([['R', 'S', 'I', ..., 'K', 'A', 'J'],\n",
-       "       ['J', 'C', 'Q', ..., 'G', 'E', 'Q'],\n",
-       "       ['B', 'A', 'O', ..., 'D', 'J', 'A'],\n",
+       "array([['H', 'X', 'A', ..., 'K', 'U', 'E'],\n",
+       "       ['E', 'M', 'S', ..., 'P', 'F', 'S'],\n",
+       "       ['Y', 'U', 'C', ..., 'N', 'E', 'U'],\n",
        "       ...,\n",
-       "       ['K', 'A', 'S', ..., 'V', 'Z', 'M'],\n",
-       "       ['W', 'R', 'P', ..., 'Z', 'B', 'J'],\n",
-       "       ['H', 'Q', 'C', ..., 'N', 'O', 'C']], shape=(100, 26), dtype='<U1')"
+       "       ['K', 'U', 'X', ..., 'Z', 'I', 'R'],\n",
+       "       ['V', 'H', 'O', ..., 'I', 'Y', 'E'],\n",
+       "       ['Q', 'S', 'M', ..., 'B', 'C', 'M']], shape=(100, 26), dtype='<U1')"
       ]
      },
      "execution_count": 30,
